some md queries done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MAC</title>
   </head>
   <body class="font-anime scrollbar-hide bg-slate-800">
-    <div id="root" class=""></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
